--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.41",
-    "@types/node-telegram-bot-api": "^0.51.1",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
   },
@@ -23,6 +22,6 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-telegram-bot-api": "^0.52.0"
+    "telegraf": "^4.7.0"
   }
 }
