--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
